@@ -9,47 +9,52 @@
     <name>commons-packet-manager</name>
     <description>Mosip commons project </description>
     <url>https://github.com/mosip/commons</url>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1-java21-SNAPSHOT</version>
  <properties>
         <!-- maven -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.version>3.8.0</maven.compiler.version>
-        <!-- <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version> -->
         <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
         <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
-        <!-- <maven.jacoco.plugin.version>0.8.1</maven.jacoco.plugin.version> -->
-        <!-- <maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version> -->
         <maven.javadoc.version>3.2.0</maven.javadoc.version>
         <maven-shade-plugin.version>2.3</maven-shade-plugin.version>
-
-        <!-- spring -->
-        <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
-        <spring.data.jpa.version>2.0.7.RELEASE</spring.data.jpa.version>
-        <spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>
-        <h2.version>1.4.197</h2.version>
-        <jackson.datatype.version>2.9.8</jackson.datatype.version>
-        <kernel.keygenerator.bouncycastle.version>1.2.1-SNAPSHOT</kernel.keygenerator.bouncycastle.version>
-        <swagger.version>2.9.2</swagger.version>
-        <powermock.beta.version>2.0.7</powermock.beta.version>
-        <junit.version>4.13.1</junit.version>
+        <maven.deploy.plugin.version>2.8.1</maven.deploy.plugin.version>
+		<maven.source.plugin.version>2.2.1</maven.source.plugin.version>
+		<maven.gpg.plugin.version>1.5</maven.gpg.plugin.version>
+		<nexus.staging.plugin.version>1.6.7</nexus.staging.plugin.version>
+		<git.commit.plugin.version>3.0.1</git.commit.plugin.version>
+        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
+        <kernel.keygenerator.bouncycastle.version>1.2.1-java21-SNAPSHOT</kernel.keygenerator.bouncycastle.version>
         <hazelcast.kubernetes.version>1.3.1</hazelcast.kubernetes.version>
 
-        <kernel-keymanager-service.version>1.2.1-SNAPSHOT</kernel-keymanager-service.version>
-        <kernel-idobjectvalidator.version>1.2.1-SNAPSHOT</kernel-idobjectvalidator.version>
-        <kernel.core.version>1.2.1-SNAPSHOT</kernel.core.version>
-        <kernel.biometrics.api.version>1.2.1-SNAPSHOT</kernel.biometrics.api.version>
-        <kernel.cbeffutil.api.version>1.2.1-SNAPSHOT</kernel.cbeffutil.api.version>
-        <kernel.crypto-jce.version>1.2.1-SNAPSHOT</kernel.crypto-jce.version>
-        <kernel.auth.adaptor.version>1.2.1-SNAPSHOT</kernel.auth.adaptor.version>
-        <kernel-dataaccess-hibernate.version>1.2.1-SNAPSHOT</kernel-dataaccess-hibernate.version>
-        <kernel.logger.logback.version>1.2.1-SNAPSHOT</kernel.logger.logback.version>
-        <spring.boot.co>2.0.2.RELEASE</spring.boot.co>
-        <khazana.version>1.2.1-SNAPSHOT</khazana.version>
+        <kernel-keymanager-service.version>1.2.1-java21-SNAPSHOT</kernel-keymanager-service.version>
+        <kernel-idobjectvalidator.version>1.2.1-java21-SNAPSHOT</kernel-idobjectvalidator.version>
+        <kernel.core.version>1.2.1-java21-SNAPSHOT</kernel.core.version>
+        <kernel.biometrics.api.version>1.2.1-java21-SNAPSHOT</kernel.biometrics.api.version>
+        <kernel.cbeffutil.api.version>1.2.1-java21-SNAPSHOT</kernel.cbeffutil.api.version>
+        <kernel.crypto-jce.version>1.2.1-java21-SNAPSHOT</kernel.crypto-jce.version>
+        <kernel.auth.adaptor.version>1.2.1-java21-SNAPSHOT</kernel.auth.adaptor.version>
+        <kernel-dataaccess-hibernate.version>1.2.1-java21-SNAPSHOT</kernel-dataaccess-hibernate.version>
+        <kernel.logger.logback.version>1.2.1-java21-SNAPSHOT</kernel.logger.logback.version>
+        <khazana.version>1.2.1-java21-SNAPSHOT</khazana.version>
+         <kernel.bom.version>1.2.1-java21-SNAPSHOT</kernel.bom.version>
+         <mockito.core.version>3.11.2</mockito.core.version>
         <sonar.coverage.exclusions>**/constants/**,**/config/**,**/audit/**,**/util/**,**/dto/**,**/entity/**,**/model/**,**/exception/**,**/repository/**,**/security/**,**/*Config.java,**/*BootApplication.java,**/*VertxApplication.java,**/cbeffutil/**,**/*Utils.java,**/*Validator.java,**/*Helper.java,**/verticle/**,**/VidWriter.java/**,**/masterdata/utils/**,**/spi/**,**/core/http/**,"**/LocationServiceImpl.java","**/RegistrationCenterMachineServiceImpl.java","**/RegistrationCenterServiceImpl.java","**/pridgenerator/**","**/idgenerator/prid","**/proxy/**","**/cryptosignature/**"</sonar.coverage.exclusions>
         <sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
     </properties>
+    <dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.mosip.kernel</groupId>
+				<artifactId>kernel-bom</artifactId>
+				<version>${kernel.bom.version}</version>
+				<type>pom</type>
+			    <scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>io.mosip.kernel</groupId>
@@ -59,7 +64,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>io.mosip.kernel</groupId>
@@ -74,7 +78,6 @@
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
         </dependency>
         <dependency>
             <groupId>io.mosip.kernel</groupId>
@@ -94,7 +97,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
-            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>io.mosip.commons</groupId>
@@ -104,19 +106,16 @@
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-module-junit4</artifactId>
-            <version>${powermock.beta.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
-            <version>${powermock.beta.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
-            <version>2.3.3</version>
         </dependency>
         <dependency>
             <groupId>io.mosip.kernel</groupId>
@@ -133,14 +132,21 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
-            <version>4.4</version>
         </dependency>
+			 <dependency>
+         <groupId>org.junit.vintage</groupId>
+          <artifactId>junit-vintage-engine</artifactId> 
+        </dependency>
+         <dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-core</artifactId>
+				 <version>${mockito.core.version}</version>
+			</dependency>
     </dependencies>
 
 
@@ -156,6 +162,18 @@
         </distributionManagement> 
         <build>
          <plugins>
+			  <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${maven.surefire.plugin.version}</version>
+                    <configuration>
+                        <skipTests>false</skipTests>
+                        <skip>false</skip>
+                        <argLine>
+                             --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --enable-preview
+                        </argLine>
+                    </configuration>
+                </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -167,7 +185,7 @@
            
             <plugin>
               <artifactId>maven-deploy-plugin</artifactId>
-              <version>2.8.1</version>
+              <version>${maven.deploy.plugin.version}</version>
               <executions>
                  <execution>
                     <id>default-deploy</id>
@@ -181,7 +199,7 @@
                <plugin>
                   <groupId>org.sonatype.plugins</groupId>
                   <artifactId>nexus-staging-maven-plugin</artifactId>
-                  <version>1.6.7</version>
+                  <version>${nexus.staging.plugin.version}</version>
                   <extensions>true</extensions>
                   <executions>
                     <execution>
@@ -203,7 +221,7 @@
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-source-plugin</artifactId>
                   <inherited>true</inherited>
-                  <version>2.2.1</version>
+                  <version>${maven.source.plugin.version}</version>
                   <executions>
                         <execution>
                           <id>attach-sources</id>
@@ -217,7 +235,7 @@
               <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-javadoc-plugin</artifactId>
-                  <version>3.2.0</version>
+                  <version>${maven.javadoc.version}</version>
                   <executions>
                         <execution>
                           <id>attach-javadocs</id>
@@ -233,7 +251,7 @@
                 <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-gpg-plugin</artifactId>
-                  <version>1.5</version>
+                  <version>${maven.gpg.plugin.version}</version>
                   <executions>
                         <execution>
                           <id>sign-artifacts</id>
@@ -253,7 +271,7 @@
 		<plugin>
     			<groupId>pl.project13.maven</groupId>
 			<artifactId>git-commit-id-plugin</artifactId>
-			<version>3.0.1</version>
+			<version>${git.commit.plugin.version}</version>
 			<executions>
         			<execution>
 			        	<id>get-the-git-infos</id>
